--- a/MIS3371/styles.css
+++ b/MIS3371/styles.css
@@ -28,6 +28,7 @@ body{
 #title{
     font-size: 36px;
     font-weight: bold;
+    text-align: center;
 }
 #footer{
     background-color: #BBD4EE; /*Slightly darker light blue*/                      
