--- a/MIS3371/styles.css
+++ b/MIS3371/styles.css
@@ -29,6 +29,7 @@ body{
     font-size: 36px;
     font-weight: bold;
     text-align: center;
+    disply: block;
 }
 #footer{
     background-color: #BBD4EE; /*Slightly darker light blue*/                      
